# bank-classifier

./: .gitignore  README.md  batch_generate.py  batch_info2.txt  batch_result.json  batched.jsonl  cleanse_data.py  compute_accuracy.py  gemma_1b_results.csv  gemma_4b_results.csv  label_with_llm.py  labeler.py  list_batch.py  llm_infra.py  main.py  nb_classification.py  nb_classify.py  parse_pdf.py  pyproject.toml  retrieve_batch.py  retrievedfile.json  send_batch.py
cleansed_data/: april.csv  august.csv  july.csv  june.csv  march.csv  may.csv  october.csv  september.csv
labeled/: april.csv  august.csv  july.csv  june.csv  march.csv  may.csv  october.csv  september.csv
llm_gen/gemma/: gemma_1b_april.csv  gemma_1b_august.csv  gemma_1b_july.csv  gemma_1b_june.csv  gemma_1b_march.csv  gemma_1b_may.csv  gemma_1b_october.csv  gemma_1b_september.csv  gemma_4b_april.csv  gemma_4b_august.csv  gemma_4b_july.csv  gemma_4b_june.csv  gemma_4b_march.csv  gemma_4b_may.csv  gemma_4b_october.csv  gemma_4b_september.csv
