[project]
name = "bank-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "huggingface>=0.0.1",
    "huggingface-hub>=0.36.0",
    "matplotlib>=3.10.7",
    "openai>=2.7.2",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.8",
    "scikit-learn>=1.7.2",
    "vllm>=0.11.0",
]
